Drive through proceso seguido
Probado a medias.
También ahora el chef visualiza entre para llevar, mesa o sin mesa

--- a/views/functions/forms/nueva-orden-drive.html
+++ b/views/functions/forms/nueva-orden-drive.html
@@ -39,6 +39,7 @@
                             <label for="">Breve descripción: </label> 
                             <input name="desc" type="text" placeholder="Escriba una descripción para la orden" class="form-control">
                         </div>
+                        <input id="drive" name="drive" value="1" hidden>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">
                                 Agregar
