--- a/views/forms/nuevo-proveedor.html
+++ b/views/forms/nuevo-proveedor.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-danger">Continuar</button>
+                            <button type="submit" class="btn btn-danger">Continuar a gestionar surtidos</button>
                         </div>
                     </form>
                 </div>
