Admin principal wuuu

--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -21,7 +21,7 @@
                             <div class="card-block">
                                 <h4 class="card-title">Usuarios</h4>
                                 <p class="card-text">Administre las credenciales con las que se usa el sistema</p>
-                                <p><a href="../forms/nuevo-usuario.html" class="btn btn-primary">Agregar</a></p>
+                                <p><a href="../forms/nuevo-usuario.php" class="btn btn-primary">Agregar</a></p>
                                 <p><a href="../lists/listar-usuarios.php" class="btn btn-primary">Ver</a></p>
                                 <p><a href="../forms/modificar-usuario.php" class="btn btn-primary">Modificar</a></p>
                             </div>
