--- a/views/forms/nueva-cocina.html
+++ b/views/forms/nueva-cocina.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-danger">Continuar</button>
+                            <button type="submit" class="btn btn-success">Ir a enlistar chefs</button>
                         </div>
                     </form>
                 </div>
