Pequeños cambios que Elmo Lina identificó en revisión
No hay avance porcentual, pero si cambios en visualización.

--- a/views/functions/forms/export.html
+++ b/views/functions/forms/export.html
@@ -37,7 +37,7 @@
         <h1 class="text-uppercase text-center">Exportar información</h2>
           <br>
           <br>
-            <p class="lead text-center">Aquí puede exportar su base de datos para tener un respaldo</p>
+            <p class="lead text-center">Aquí puede exportar su información para tener un respaldo</p>
             <p class="lead text-center">o usar el archivo para trasnsferir sus datos a otro sistema</p>
             <br>
             <br>
