--- a/views/functions/forms/import.html
+++ b/views/functions/forms/import.html
@@ -37,9 +37,9 @@
         <h1 class="text-uppercase text-center">Importar información</h2>
           <br>
           <br>
-            <p class="lead text-center">Aquí puede importar su base de datos para recuperar los datos de un guardado previo</p>
+            <p class="lead text-center">Aquí puede importar su información del sistema para recuperar los datos de un guardado previo</p>
             <p class="lead text-center">o pasar su información de otro sistema</p>
-            <p class="lead text-center"><font color="red">!CUIDADO, SI NO HA RESPALDADO SU INFORMACIÓN PREVIA, ESTA SERÁ BORRADA!</font></p>
+            <p class="lead text-center"><font color="red">¡CUIDADO, SI NO HA RESPALDADO SU INFORMACIÓN PREVIA, ESTA SERÁ BORRADA!</font></p>
             <br>
             <br>
             <div class="text-center">
