--- a/views/menus/index.html
+++ b/views/menus/index.html
@@ -1,82 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, inicial-scale=1">
 
-        <title>
-            ¡Bienvenido a SubstanceSoft - Restaurant Control System!
-        </title>
-        <link rel="shortcut icon" type="image/x-icon" href="../../images/icono.png" />
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, inicial-scale=1">
 
-        <link href="../../css/bs/bootstrap.min.css" rel="stylesheet">
-        <link href="../../css/clean-install.css" rel="stylesheet">
-    </head>
-    <body>
-        <section class="intro">
-            <div class="inner">
-                <div class="content">
-                    <h1>SubstanceSoft: Control de restaurante</h1>
-                    <a class="btn" href="index.html#click">Comenzar</a>
-                </div>
+    <title>
+        ¡Bienvenido a SubstanceSoft - Restaurant Control System!
+    </title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/icono.png" />
+
+    <link href="../../css/bs/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/clean-install.css" rel="stylesheet">
+</head>
+
+<body>
+    <section class="intro">
+        <div class="inner">
+            <div class="content">
+                <h1>SubstanceSoft: Control de restaurante</h1>
+                <a class="btn" href="index.html#click">Comenzar</a>
             </div>
-        </section>
-        <div id="click"></div>
-        <section class="container">
-            <h1 class="text-uppercase text-center">Empezando</h2>
-            <p class="lead text-center">Por favor, llene los campos con la información requerida. Los campos marcados con <font color="red">*</font> son obligatorios.</p>
+        </div>
+    </section>
+    <div id="click"></div>
+    <section class="container">
+        <h1 class="text-uppercase text-center">Empezando</h2>
+            <p class="lead text-center">Por favor, llene los campos con la información requerida. Los campos marcados
+                con <font color="red">*</font> son obligatorios.</p>
             <div class="row">
                 <div class="col-8">
                     <form id="formulario" novalidate onsubmit="return check();">
                         <div class="form-group">
-                            <label for="">Nombre del restaurante: </label> <font color="red">*</font>
-                            <input type="text" name="res" placeholder="Escriba el nombre del restaurante" class="form-control" required>
+                            <label for="">Nombre del restaurante: </label>
+                            <font color="red">*</font>
+                            <input type="text" name="res" placeholder="Escriba el nombre del restaurante"
+                                class="form-control" required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="">Nombre de usuario del administrador:  </label> <font color="red">*</font>
-                            <input name="usu" type="text" placeholder="Escriba el nombre para iniciar sesión en el sistema" class="form-control" required>
+                            <label for="">Nombre de usuario del administrador: </label>
+                            <font color="red">*</font>
+                            <input name="usu" type="text"
+                                placeholder="Escriba el nombre para iniciar sesión en el sistema" class="form-control"
+                                required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="">Contraseña: </label> <font color="red">*</font>
-                            <input onkeyup='check();' id="password" type="password" name="pas" placeholder="Escriba la contraseña que usará para iniciar sesión" class="form-control" required>
+                            <label for="">Contraseña: </label>
+                            <font color="red">*</font>
+                            <input onkeyup='check();' id="password" type="password" name="pas"
+                                placeholder="Escriba la contraseña que usará para iniciar sesión" class="form-control"
+                                required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="">Confirmar contraseña: </label> <font color="red">*</font>
-                            <input onkeyup='check();' id="confirm_password"type="password" placeholder="Repita la contraseña" class="form-control" required>
+                            <label for="">Confirmar contraseña: </label>
+                            <font color="red">*</font>
+                            <input onkeyup='check();' id="confirm_password" type="password"
+                                placeholder="Repita la contraseña" class="form-control" required>
                             <div class="invalid-feedback">
                                 Ingresa datos
-                              </div>
-                              <span id="message"> </span>
+                            </div>
+                            <span id="message"> </span>
                         </div>
                         <div class="form-group">
                             <label for="">Nombre del administrador </label>
-                            <input name="nom"type="text" placeholder="Escriba el nombre del administrador" class="form-control">
+                            <input name="nom" type="text" placeholder="Escriba el nombre del administrador"
+                                class="form-control">
                         </div>
                         <div class="form-group">
-                                <label for="">Apellido paterno del administrador</label>
-                                <input name="pat" type="text" placeholder="Escriba el apellido paterno del administrador" class="form-control">
+                            <label for="">Apellido paterno del administrador</label>
+                            <input name="pat" type="text" placeholder="Escriba el apellido paterno del administrador"
+                                class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="">Apellido materno del administrador</label>
-                            <input name ="mat" type="text" placeholder="Escriba el apellido materno del administrador" class="form-control">
+                            <input name="mat" type="text" placeholder="Escriba el apellido materno del administrador"
+                                class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="">Teléfono de contacto</label>
-                            <input name="tel" type="number" placeholder="Escriba el teléfono de contacto del administrador" class="form-control">
+                            <input name="tel" type="number"
+                                placeholder="Escriba el teléfono de contacto del administrador" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="">Dirección:</label>
-                            <input name="dir" type="text" placeholder="Escriba la dirección del administrador / restaurante." class="form-control">
+                            <input name="dir" type="text"
+                                placeholder="Escriba la dirección del administrador / restaurante."
+                                class="form-control">
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-danger">Continuar</button>
@@ -84,41 +103,41 @@
                     </form>
                 </div>
             </div>
-        </section>
-        <script>
-            function check()
-            {
-                if (document.getElementById('password').value ==
-                    document.getElementById('confirm_password').value) {
-                    document.getElementById('message').style.color = 'green';
-                    document.getElementById('message').innerHTML = 'Ok';
-                    return true;
-                } else {
-                    document.getElementById('message').style.color = 'red';
-                    document.getElementById('message').innerHTML = 'Las contraseñas no coinciden';
-                    return false;
-                }
+    </section>
+    <script>
+        function check() {
+            if (document.getElementById('password').value ==
+                document.getElementById('confirm_password').value) {
+                document.getElementById('message').style.color = 'green';
+                document.getElementById('message').innerHTML = 'Ok';
+                return true;
+            } else {
+                document.getElementById('message').style.color = 'red';
+                document.getElementById('message').innerHTML = 'Las contraseñas no coinciden';
+                return false;
             }
+        }
 
-            (function() {
-                'use strict';
+        (function () {
+            'use strict';
 
-                window.addEventListener('load', function() {
+            window.addEventListener('load', function () {
                 var form = document.getElementById('formulario');
-                form.addEventListener('submit', function(event) {
+                form.addEventListener('submit', function (event) {
                     if (form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
+                        event.preventDefault();
+                        event.stopPropagation();
                     }
                     form.classList.add('was-validated');
                 }, false);
-                }, false);
-            })();
-        </script>
-    </body>
-    <script src="../../js/vendor/validate-form.js"></script>
-    <script src="../../js/forms/clean-install.js"></script>
-    <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
-    <script src="../../js/vendor/popper.min.js"></script>
-    <script src="../../js/vendor/bootstrap.min.js"></script>
+            }, false);
+        })();
+    </script>
+</body>
+<script src="../../js/vendor/validate-form.js"></script>
+<script src="../../js/forms/clean-install.js"></script>
+<script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
+<script src="../../js/vendor/popper.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+
 </html>
