ME LLEVA LA VRG
Cambiados 63 botones de goBack a href estático porque MALDITO ELECTRON NO SIRVE CON ESO AHH

--- a/views/forms/nuevo-proveedor.html
+++ b/views/forms/nuevo-proveedor.html
@@ -18,7 +18,7 @@
 
 <body class="s-bg">
 <div class="s-nb">
-    <a onclick="goBack()"   style="float: left;">
+    <a href="./../functions/modulo0-funcion0.php"  style="float: left;">
         <img src="../../images/back.png" style="width: 50px;" alt="Regresar">
     </a>
     <a href="../../views/menus/index.php">
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-danger">Continuar a gestionar surtidos</button>
+                            <button type="submit" class="btn btn-success">Continuar a gestionar surtidos</button>
                         </div>
                     </form>
                 </div>
