--- a/views/forms/configurar-arduino.html
+++ b/views/forms/configurar-arduino.html
@@ -21,7 +21,7 @@
 
 <body class="s-bg">
     <div class="s-nb">
-        <a onclick="goBack(1)" style="float: left;">
+        <a href="./../functions/modulo0-funcion4.php" style="float: left;">
             <img src="../../images/back.png" style="width: 50px;" alt="Regresar">
         </a>
         <a href="../../views/menus/index.php">
