--- a/views/forms/nueva-mesa.html
+++ b/views/forms/nueva-mesa.html
@@ -18,7 +18,7 @@
 
 <body class="s-bg">
 <div class="s-nb">
-    <a onclick="goBack()"   style="float: left;">
+    <a href="./../functions/modulo0-funcion0.php" style="float: left;">
         <img src="../../images/back.png" style="width: 50px;" alt="Regresar">
     </a>
     <a href="../../views/menus/index.php">
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-danger">Continuar</button>
+                            <button type="submit" class="btn btn-primary">Continuar</button>
                         </div>
                     </form>
                 </div>
